auto-test/tests/chapter_18/invalid_parse/extra_credit/default_kw_member_name.c

struct s {
    int default;
};

int main(void) {
    return 0;
}